// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slider renders (disabled) Slider correctly 1`] = `
<div
  className=""
  id="slider-1"
>
  <div
    className=""
  >
    <div
      className=""
    />
    <div
      className=""
    >
      <div
        className="ms-Slider-track"
        style={
          Object {
            "borderRadius": "99px",
            "left": 0,
            "transition": "none",
            "width": "50%",
          }
        }
      />
    </div>
    <div
      className=""
      style={
        Object {
          "transform": "translateX(50%)",
          "transition": "none",
        }
      }
    >
      <div
        className="ms-Slider-thumb"
      />
    </div>
    <div
      className=""
    />
    <input
      className=""
      disabled={true}
      max={10}
      min={0}
      onChange={[Function]}
      step={1}
      type="range"
      value={5}
    />
  </div>
</div>
`;

exports[`Slider renders Slider correctly 1`] = `
<div
  className=""
  id="slider-1"
  onKeyDown={[Function]}
  onPointerDown={[Function]}
>
  <div
    className=""
  >
    <div
      className=""
    />
    <div
      className=""
    >
      <div
        className="ms-Slider-track"
        style={
          Object {
            "borderRadius": "99px",
            "left": 0,
            "transition": "none",
            "width": "50%",
          }
        }
      />
    </div>
    <div
      className=""
      style={
        Object {
          "transform": "translateX(50%)",
          "transition": "none",
        }
      }
    >
      <div
        className="ms-Slider-thumb"
      />
    </div>
    <div
      className=""
    />
    <input
      className=""
      disabled={false}
      max={10}
      min={0}
      onChange={[Function]}
      step={1}
      type="range"
      value={5}
    />
  </div>
</div>
`;

exports[`Slider renders Slider with origin correctly 1`] = `
Array [
  <div
    className=""
    id="slider-1"
    onKeyDown={[Function]}
    onPointerDown={[Function]}
  >
    <div
      className=""
    >
      <div
        className=""
      />
      <div
        className=""
      >
        <div
          className="ms-Slider-track"
          style={
            Object {
              "borderRadius": "0px 99px 99px 0px",
              "left": "20%",
              "transition": "none",
              "width": "30%",
            }
          }
        />
      </div>
      <div
        className=""
        style={
          Object {
            "transform": "translateX(50%)",
            "transition": "none",
          }
        }
      >
        <div
          className="ms-Slider-thumb"
        />
      </div>
      <div
        className=""
      />
      <input
        className=""
        disabled={false}
        max={10}
        min={0}
        onChange={[Function]}
        step={1}
        type="range"
        value={5}
      />
    </div>
  </div>,
  <div
    className=""
    id="slider-2"
    onKeyDown={[Function]}
    onPointerDown={[Function]}
  >
    <div
      className=""
    >
      <div
        className=""
      />
      <div
        className=""
      >
        <div
          className="ms-Slider-track"
          style={
            Object {
              "borderRadius": "0px 0px 99px 99px",
              "height": "30%",
              "top": "20%",
              "transition": "none",
            }
          }
        />
      </div>
      <div
        className=""
        style={
          Object {
            "transform": "translateY(50%)",
            "transition": "none",
          }
        }
      >
        <div
          className="ms-Slider-thumb"
        />
      </div>
      <div
        className=""
      />
      <input
        className=""
        disabled={false}
        max={10}
        min={0}
        onChange={[Function]}
        step={1}
        type="range"
        value={5}
      />
    </div>
  </div>,
]
`;

exports[`Slider renders vertical Slider correctly 1`] = `
<div
  className=""
  id="slider-1"
  onKeyDown={[Function]}
  onPointerDown={[Function]}
>
  <div
    className=""
  >
    <div
      className=""
    />
    <div
      className=""
    >
      <div
        className="ms-Slider-track"
        style={
          Object {
            "borderRadius": "99px",
            "height": "50%",
            "top": 0,
            "transition": "none",
          }
        }
      />
    </div>
    <div
      className=""
      style={
        Object {
          "transform": "translateY(50%)",
          "transition": "none",
        }
      }
    >
      <div
        className="ms-Slider-thumb"
      />
    </div>
    <div
      className=""
    />
    <input
      className=""
      disabled={false}
      max={10}
      min={0}
      onChange={[Function]}
      step={1}
      type="range"
      value={5}
    />
  </div>
</div>
`;
